--- a/autocar-detailing/src/css/Header.css
+++ b/autocar-detailing/src/css/Header.css
@@ -136,3 +136,13 @@ header {
     }
 
   }
+
+
+  @media (max-width:411px) {
+    #logo {
+      background-image: url('../../public/img/logo.png');
+      width: 150px;
+      height: 150px;
+      margin: unset;
+    }
+  }
